--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core:
+  firebase_auth:
+  google_sign_in:
+  cloud_firestore: ^3.1.10
+  equatable:
+  flutter_bloc:
 
 
   # The following adds the Cupertino Icons font to your application.
