--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   firebase_auth:
   google_sign_in:
   cloud_firestore: ^3.1.10
+  firebase_storage: ^10.2.10
+  image_picker: ^0.8.5
+  share_plus: ^4.0.3
   equatable:
   flutter_bloc:
 
