--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   share_plus: ^4.0.3
   equatable:
   flutter_bloc:
+  path_provider: ^2.0.9
+  screenshot:
 
 
   # The following adds the Cupertino Icons font to your application.
